# QMLSharedPointer

./: CMakeLists.txt  README.md
src/: ChildQmlObject.cpp  ChildQmlObject.h  ExampleQmlObject.cpp  ExampleQmlObject.h  QmlSharedPointer.h  main.cpp  main.qml
